[project]
name = "newapi-check"
version = "0.1.0"
description = "FastAPI application with Linux.do OAuth2 integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.19.0",
]
